--- a/src/global.css
+++ b/src/global.css
@@ -23,6 +23,7 @@ button {
 
 form input {
   margin-top: 10px;
+  margin-bottom: 5px;
   width: 100%;
   height: 40px;
   color: #333;
@@ -33,12 +34,13 @@ form input {
 
 .button {
   width: 100%;
-  height: 50px;
+  height: 60px;
   background: #768ec2;
   border: 0;
   border-radius: 8px;
   color: #fff;
   margin-top: 16px;
+  margin-bottom: 10px;
   text-align: center;
   text-decoration: none;
   font-size: 17px;
