--- a/src/global.css
+++ b/src/global.css
@@ -34,17 +34,19 @@ form input {
 
 .button {
   width: 100%;
-  height: 60px;
+  height: 50px;
   background: #768ec2;
-  border: 0;
   border-radius: 8px;
   color: #fff;
   margin-top: 16px;
   margin-bottom: 10px;
   text-align: center;
-  text-decoration: none;
   font-size: 17px;
   font-weight: bold;
-  line-height: 60px;
+  line-height: 40px;
   transition: filter 0.2s;
+}
+
+button:hover {
+  filter: brightness(90%);
 }
