--- a/src/pages/Session/styles.css
+++ b/src/pages/Session/styles.css
@@ -1,14 +1,25 @@
 .container-products {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 1100;
 }
 
 .box-product {
   margin-top: 30px;
   margin-right: 10px;
   margin-left: 10px;
-  width: 220px;
-  height: 250px;
-  background: #ff1;
+  width: 250px;
+  height: 280px;
+  background: rgb(238, 238, 238);
+  padding: 10px 10px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.product-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 120px;
+  height: 120px;
 }
