--- a/src/pages/Session/styles.css
+++ b/src/pages/Session/styles.css
@@ -16,8 +16,15 @@
   border-radius: 5px;
 }
 
+.box-product:hover {
+  opacity: 0.7;
+  cursor: pointer;
+  box-shadow: 2px 2px black;
+}
+
 .product-img {
   display: block;
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
   width: 120px;
